--- a/SurveyAnswererApp/SurveyAnswererApp/Views/QuestionnairePage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/QuestionnairePage.xaml
@@ -16,52 +16,51 @@
     <style:TextStyleResource />
   </ContentPage.Resources>
 
+  <NavigationPage.TitleView>
+    <StackLayout Orientation="Horizontal">
+
+      <Label Text="{Binding Questionnaire.Title, StringFormat=Survey \'\{0\}\'}"
+             Style="{StaticResource TitleText}"
+             VerticalOptions="Center"
+             TextColor="White"
+             FontSize="Large"
+             />
+      <Button Text="Close"
+              x:Name="ExitSurvey"
+              Clicked="ExitSurveyButton_OnClicked"
+              HorizontalOptions="End">
+        <!-- TODO Make this a X symbol -->
+      </Button>
+    </StackLayout>
+  </NavigationPage.TitleView>
+
   <ContentPage.Content>
     <StackLayout CascadeInputTransparent="True">
 
-      <!-- Title bar -->
-      <ContentView x:Name="QnTitleBarView"
-                   BackgroundColor="Accent"  CascadeInputTransparent="True">
-        <AbsoluteLayout CascadeInputTransparent="True">
-          <Button Text="Close"
-                  x:Name="ExitSurvey"
-                  Clicked="ExitSurveyButton_OnClicked"
-                  AbsoluteLayout.LayoutFlags="PositionProportional"
-                  AbsoluteLayout.LayoutBounds="1.0,0.0,AutoSize,AutoSize"
-                  >
-            <!-- TODO Make this a X symbol -->
-          </Button>
-        </AbsoluteLayout>
-      </ContentView>
-
-      <Label Text="{Binding Questionnaire.Title, StringFormat=Survey \'\{0\}\'}"
-             Style="{StaticResource TitleText}" />
-
       <!-- Questionnaire content -->
       <!--<RefreshView IsEnabled="False">-->
-        <ScrollView>
+      <ScrollView>
 
-          <StackLayout VerticalOptions="CenterAndExpand"
-                       HorizontalOptions="FillAndExpand"
-                       Margin="10,0"
-                       BindableLayout.ItemsSource="{Binding Questions}"
-                       >
-            <BindableLayout.ItemTemplate>
-              <DataTemplate>
-                
-                <StackLayout>
-                  <Label Text="{Binding Nr, StringFormat=Question ID \{0\}:}" 
-                         Style="{StaticResource QuestionIdText}" />
-                  <Label Text="{Binding QuestionText}" 
-                         Style="{StaticResource QuestionText}" />
-                  <view:QuestionView />
-                </StackLayout>
-              </DataTemplate>
-          
-            </BindableLayout.ItemTemplate>
-          
-          </StackLayout>
-        </ScrollView>
+        <StackLayout VerticalOptions="CenterAndExpand"
+                     HorizontalOptions="FillAndExpand"
+                     Margin="10,0"
+                     BindableLayout.ItemsSource="{Binding Questions}">
+          <BindableLayout.ItemTemplate>
+            <DataTemplate>
+
+              <StackLayout>
+                <Label Text="{Binding Nr, StringFormat=Question ID \{0\}:}"
+                       Style="{StaticResource QuestionIdText}" />
+                <Label Text="{Binding QuestionText}"
+                       Style="{StaticResource QuestionText}" />
+                <view:QuestionView />
+              </StackLayout>
+            </DataTemplate>
+
+          </BindableLayout.ItemTemplate>
+
+        </StackLayout>
+      </ScrollView>
       <!--</RefreshView>-->
 
 
