--- a/SurveyAnswererApp/SurveyAnswererApp/Views/SurveyListPage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/SurveyListPage.xaml
@@ -18,7 +18,7 @@
     <ListView x:Name="MyListView"
               ItemTapped="Handle_ItemTapped"
               CachingStrategy="RecycleElement" 
-              ItemsSource="{Binding Surveys}"
+              ItemsSource="{Binding AvailableSurveys}"
               >
       <!--Built in Cells-->
       <ListView.ItemTemplate>
