--- a/SurveyAnswererApp/SurveyAnswererApp/Views/SurveyListPage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/SurveyListPage.xaml
@@ -7,7 +7,9 @@
              xmlns:vm="clr-namespace:SurveyAnswererApp.ViewModels"
              mc:Ignorable="d"
              x:Class="SurveyAnswererApp.Views.SurveyListPage"
-             Title="Surveys">
+             Title="Surveys" 
+             IconImageSource="{x:OnPlatform iOS='tab_feed.png', Android='tab_feed'}"
+             >
 
   <ContentPage.BindingContext>
     <vm:SurveyListViewModel />
