--- a/SurveyAnswererApp/SurveyAnswererApp/Views/HistoryListPage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/HistoryListPage.xaml
@@ -11,51 +11,53 @@
              IconImageSource="{x:OnPlatform iOS='tab_feed.png', Android='tab_feed.png'}"
              Title="History">
   <ContentPage.BindingContext>
-    <vm:HistoryListViewModel />
+    <vm:HistoryListViewModel x:Name="HistoryListViewContext" />
   </ContentPage.BindingContext>
 
-  <StackLayout>
-    <Label VerticalOptions="Start">HistoryListPage</Label>
-    <ListView x:Name="HistoryListView"
-              ItemTapped="Handle_ItemTapped"
-              ItemsSource="{Binding HistoryHistorySurveys}"
-              CachingStrategy="RecycleElement">
-      <!--Built in Cells-->
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <!-- <ContentView> -->
-            <!--   <ContentView.GestureRecognizers> -->
-            <!--     <TapGestureRecognizer Command="{Binding ListItemSelectCommand}" /> -->
-            <!--   </ContentView.GestureRecognizers> -->
-              <StackLayout>
-                <Label Text="{Binding Title}"
-                       d:Text="{Binding Title}" />
-                <Label Text="{Binding SurveyMeta.SentDate, StringFormat=Sent on \{0\}}"
-                       d:Text="{Binding SurveyMeta.SentDate, StringFormat=Sent on \{0\}}" />
-              </StackLayout>
-            <!-- </ContentView> -->
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
+  <StackLayout Margin="10,15,10,20">
+    <Label VerticalOptions="Start"
+           FontSize="40">Previously answered surveys</Label>
+    <BoxView WidthRequest="1"
+             HeightRequest="4"
+             BackgroundColor="LightSlateGray" />
+    <ScrollView HorizontalOptions="FillAndExpand"
+                VerticalOptions="Start" 
+                VerticalScrollBarVisibility="Default"
+                HorizontalScrollBarVisibility="Default">
+      <!-- NOTE Scrollbars on Android not visible - Bug in Xamarin.Forms 4.* - expected to be fixed with 4.7 -->
+      <StackLayout
+        BindableLayout.ItemsSource="{Binding HistoryHistorySurveys}">
+        <BindableLayout.ItemTemplate>
+          <DataTemplate>
 
-      <!--Custom View Cells-->
-      <!--
-    <ListView.ItemTemplate>
-      <DataTemplate>
-        <ViewCell>
-          <StackLayout>
-            <Label Text="{Binding Text}" 
-                   d:Text="{Binding .}"
-                   Style="{DynamicResource ListItemTextStyle}" />
-            <Label Text="{Binding Detail}" 
-                   d:Text="Detail"
-                   Style="{DynamicResource ListItemDetailTextStyle}"/>
-          </StackLayout>
-        </ViewCell>
-      </DataTemplate>
-    </ListView.ItemTemplate>
-    -->
-    </ListView>
+              <Frame
+                Padding="3"
+                CornerRadius="5"
+                BackgroundColor="Honeydew"
+                Margin="5,5,5,5"
+                HasShadow="True"
+                BorderColor="SlateGray">
+                <StackLayout Margin="10,15,10,15" 
+                             VerticalOptions="Center" >
+                  
+                  <Label Text="{Binding .Title, StringFormat=👍 \{0\}}" 
+                         FontSize="Medium"/>
+                  <Label Text="{Binding SurveyMeta.SentDate, StringFormat=Sent on \{0\}}"
+                         HorizontalOptions="End"/>
+                </StackLayout>
+                <Frame.GestureRecognizers>
+                  <TapGestureRecognizer
+                    Command="{Binding  
+                    Path=SurveySelectedCommand,
+                    Source={x:Reference HistoryListViewContext}
+                    }"
+                    CommandParameter="{Binding .}"
+                  />
+                </Frame.GestureRecognizers>
+              </Frame>
+          </DataTemplate>
+        </BindableLayout.ItemTemplate>
+      </StackLayout>
+    </ScrollView>
   </StackLayout>
 </ContentPage>
