--- a/SurveyAnswererApp/SurveyAnswererApp/Views/AboutPage.xaml
+++ b/SurveyAnswererApp/SurveyAnswererApp/Views/AboutPage.xaml
@@ -9,7 +9,8 @@
              
              xmlns:vm="clr-namespace:SurveyAnswererApp.ViewModels"
              IconImageSource="{x:OnPlatform iOS='tab_about.png', Android='tab_about.png'}"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             Visual="Material">
 
   <ContentPage.BindingContext>
         <vm:AboutViewModel />
@@ -26,24 +27,18 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-                </ContentView>
-            </StackLayout>
-        </StackLayout>
-        <ScrollView Grid.Row="1">
+        <ScrollView Grid.Row="0">
             <StackLayout Orientation="Vertical" Padding="16,40,16,40" Spacing="10">
                 <Label FontSize="22">
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="AppName" FontAttributes="Bold" FontSize="22" />
+                                <Span Text="Survey Answerer App" FontAttributes="Bold" FontSize="Title" />
                                 <Span Text=" " />
-                                <Span Text="1.0" ForegroundColor="{StaticResource LightTextColor}" />
+                                <Span Text="v1.0" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -52,31 +47,49 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="This app is written in C# and native APIs using the" />
-                                <Span Text=" " />
-                                <Span Text="Xamarin Platform" FontAttributes="Bold" />
+                                <Span Text="This app is part of a Bachelor thesis about mobile app development for multiple platforms. It is written in C# and native APIs using the " />
+                                <Span Text="Xamarin.Forms" FontAttributes="Bold" /> 
+                                <Span Text=" framework. It uses a single code base to create iOS, Android, and Windows UWP apps." />
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+              <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
+                  <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
+                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
+                  </ContentView>
+                </StackLayout>
+              </StackLayout>
+                <Label>
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="©2020, Franz Reischl for " />
+                                <Span Text="SE (Software Engineering) Institute" 
+                                      FontAttributes="Bold"
+                                      TextDecorations="Underline"
+                                      TextColor="Blue"
+                                      >
+                                  <Span.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding OpenWebSeCommand}" />
+                                  </Span.GestureRecognizers>
+                                </Span>
+                                <Span Text=" @ " />
+                                <Span Text="Johannes Kepler University, Austria" 
+                                      FontAttributes="Bold"
+                                      TextDecorations="Underline"
+                                      TextColor="Blue"
+                                      >
+                                  <Span.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding OpenWebJkuCommand}" />
+                                  </Span.GestureRecognizers>
+                                </Span>
                                 <Span Text="." />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="It shares code with its" />
-                                <Span Text=" " />
-                                <Span Text="iOS, Android, and Windows" FontAttributes="Bold" />
-                                <Span Text=" " />
-                                <Span Text="versions." />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
             </StackLayout>
         </ScrollView>
     </Grid>
